tolk-tester/tests/invalid-typing/err-6179.tolk
fun f(x: slice = ton("0.04")) {
}

/**
@compilation_should_fail
@stderr can not assign `coins` to `slice`
 */
